test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  struct
  identifier(x)
  ;
  union
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
